--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <section>
             <h1>Сучасна пекарня</h1>
-        </segitction>
+        </section>
         <section>
             <h2></h2>
             <p></p-m>
