Update index.html and add images

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <section>
             <h1>Сучасна пекарня</h1>
-        </section>
+        </segitction>
         <section>
             <h2></h2>
             <p></p-m>
