--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h2></h2>
             <p></p-m>
             <p></p>
-            <img src="./img/Backer-men.jpg``" alt="Чоловік пекар дивится на хліб з посмішкою">
+            <img src="./img/Backer-men.jpg" alt="Чоловік пекар дивится на хліб з посмішкою">
         </section>
         <section>
             <h2></h2>
