--- a/index.html
+++ b/index.html
@@ -1,116 +1,155 @@
 <!DOCTYPE html>
 <html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <img src="./img/logo.svg" alt="лого">
-        <nav>
-            <ul>
-                <li><a href="#">Наші традиції</a></li>
-                <li><a href="#">Шеф-кухарі</a></li>
-                <li><a href="#">Формати</a></li>
-                <li><a href="#">Контакти</a></li>
-            </ul>
-        </nav>
-        <button type="button"><a href="#">Замовити дзвінок</a></button>
+      <a href="./index.html">
+        <img src="./img/logo.svg" alt="лого" />
+      </a>
+      <nav>
+        <ul>
+          <li><a href="#traditions-section">Наші традиції</a></li>
+          <li><a href="#chefs-section">Шеф-кухарі</a></li>
+          <li><a href="#formats-section">Формати</a></li>
+          <li><a href="#contacts-section">Контакти</a></li>
+        </ul>
+      </nav>
+      <button type="button"><a href="#">Замовити дзвінок</a></button>
     </header>
     <main>
-        <section>
-            <h1>Сучасна пекарня</h1>
-        </section>
-        <section>
-            <h2></h2>
-            <p></p-m>
-            <p></p>
-            <img src="./img/Backer-men.jpg" alt="Чоловік пекар дивится на хліб з посмішкою">
-        </section>
-        <section>
-            <h2></h2>
-            <ul>
-                <li>
-                    <article>
-                        <img src="@img" alt="Пекар Настя">
-                        <h3></h3>
-                        <p></p>
-                        <p></p>
-                        <p></p>
-                    </article>
-                </li>
-                <li>
-                    <article>
-                        <img src="@img" alt="Пекар Влад">
-                        <h3></h3>
-                        <p></p>
-                        <p></p>
-                        <p></p>
-                    </article>
-                </li>
-            </ul>
-        </section>
-        <section>
-            <h2></h2>
-            <ul>
-                <li>
-                    <article>
-                        <h3></h3>
-                        <p></p>
-                        <p></p>
-                        <p></p>
-                        <p></p>
-                    </article>
-                </li>
-                <li>
-                    <article>
-                        <h3></h3>
-                        <p></p>
-                        <p></p>
-                        <p></p>
-                        <p></p>
-                    </article>
-                </li>
-                <li>
-                    <article>
-                        <h3></h3>
-                        <p></p>
-                        <p></p>
-                        <p></p>
-                        <p></p>
-                    </article>
-                </li>
-            </ul>
-        </section>
-        <section></section>
+      <section>
+        <h1>Сучасна пекарня</h1>
+      </section>
+      <section id="traditions-section">
+        <h2>Новий формат традицій</h2>
+        <p>
+          shop bakery — це пекарня, яка взяла все найкраще, і зберегла смак
+          традиційної випічки та натуральність інгредієнтів.
+        </p>
+        <p>
+          Ми працюємо як найвідоміші мережі— 5 хвилин і замовлення готове. А ще
+          у наших пекарень стильний дизайн та висока якість обслуговування!
+        </p>
+        <img
+          src="./img/Backer-men.jpg"
+          alt="Чоловік пекар дивится на хліб з посмішкою"
+        />
+      </section>
+      <section id="chefs-section">
+        <h2>Наші найкращі шеф -кухарі</h2>
+        <ul>
+          <li>
+            <article>
+              <img src="./img/Nastya-Baker.jpg" alt="Пекар Настя" />
+              <h3>Настя</h3>
+              <p>Привіт, я Настя!</p>
+              <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
+              <p>Я випічу для вас найсмачніщі вироби!</p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <img src="./img/Vlad-Baker.jpg" alt="Пекар Влад" />
+              <h3>Влад</h3>
+              <p>Привіт, я Влад!</p>
+              <p>
+                Мій кодитерський стаж вже 18 років.SHOP BEKERY - це наша любов,
+                з якою ми ділимось кожен раз з Вами через нашу випічку!
+              </p>
+              <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
+            </article>
+          </li>
+        </ul>
+      </section>
+      <section id="formats-section">
+        <h2>Формати</h2>
+        <ul>
+          <li>
+            <article>
+              <h3>Walrus</h3>
+              <p>Площа: до 120 м2</p>
+              <p>Меню: розширене меню</p>
+              <p>
+                Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                офіціанти-різнороби
+              </p>
+              <p>Посадкові місця: є</p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3>Horseshoe</h3>
+              <p>Площа: до 25 м2</p>
+              <p>Меню: найпопулярніші позиції меню</p>
+              <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
+              <p>Посадкові місця: відсутні</p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3>Handlebar</h3>
+              <p>Площа: до 15 м2</p>
+              <p>Меню: найпопулярніші позиції меню</p>
+              <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
+              <p>Посадкові місця: відсутні</p>
+            </article>
+          </li>
+        </ul>
+      </section>
+      <section id="contacts-section">
+        <h2>Приєднуйся до мережі пекарень</h2>
+        <p>Заповни форму, щоб ми звʼязались з тобою!</p>
+        <!--Тут має бути форма-->
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1636289098733!2d30.4912733!3d50.4566776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1761744728534!5m2!1suk!2sua"
+          width="603"
+          height="595"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </section>
     </main>
     <footer>
-        <img src="./img/logo.svg" alt="лого">
-        <nav>
-            <ul>
-                <li><a href="#">Наші традиції</a></li>
-                <li><a href="#">Шеф-кухарі</a></li>
-                <li><a href="#">Формати</a></li>
-                <li><a href="#">Контакти</a></li>
-            </ul>
-        </nav>
-        <address>
-            <ul>
-                <li><a href="tel:+380960000007">+ 38 (096) 000 00 07</a></li>
-                <li><a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a></li>
-                <li><a href="https://maps.app.goo.gl/qRS1tQLcor2ekWXy6" target="_blank">Україна, м. Київ,
-                вул. Січових Стрільців 54</a></li>
-                <li><a href="#">
-                    <!-- Facebook SVG Icon -->
-                </a></li>
-                <li><a href="#">
-                    <!-- Instagram SVG Icon -->
-                </a></li>
-            </ul>
-        </address>
-        <a href="#" target="_blank">Політика конфіденційності</a>
-        <p>© 2024 ShopBakery. Всі права захищені.</p>
+      <img src="./img/logo.svg" alt="лого" />
+      <nav>
+        <ul>
+          <li><a href="#traditions-section">Наші традиції</a></li>
+          <li><a href="#chefs-section">Шеф-кухарі</a></li>
+          <li><a href="#formats-section">Формати</a></li>
+          <li><a href="#contacts-section">Контакти</a></li>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li><a href="tel:+380960000007">+ 38 (096) 000 00 07</a></li>
+          <li>
+            <a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a>
+          </li>
+          <li>
+            <a href="https://maps.app.goo.gl/qRS1tQLcor2ekWXy6" target="_blank"
+              >Україна, м. Київ, вул. Січових Стрільців 54</a
+            >
+          </li>
+          <li>
+            <a href="#">
+              <!-- Facebook SVG Icon -->
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <!-- Instagram SVG Icon -->
+            </a>
+          </li>
+        </ul>
+      </address>
+      <a href="#" target="_blank">Політика конфіденційності</a>
+      <p>© 2024 ShopBakery. Всі права захищені.</p>
     </footer>
-</body>
+  </body>
 </html>
