--- a/index.html
+++ b/index.html
@@ -31,35 +31,37 @@
           <span class="accent-color">Сучасна</span> пекарня
         </h1>
         <ul class="advantages-list">
-          <li>Великий попит на ринку</li>
-          <li>Доступні за бюджетом формати</li>
-          <li>Досвідчена управлінська команда</li>
+          <li class="advantages-item">Великий попит на ринку</li>
+          <li class="advantages-item">Доступні за бюджетом формати</li>
+          <li class="advantages-item">Досвідчена управлінська команда</li>
         </ul>
       </section>
-      <section id="traditions-section">
+      <section class="traditions-section" id="traditions-section">
         <h2>Новий формат традицій</h2>
         <p>
-          <span class="color-green">SHOP BAKERY</span> — це пекарня, яка взяла
-          все найкраще, і зберегла смак традиційної випічки та натуральність
-          інгредієнтів.
+          <span class="text-decoration uppercase">SHOP BAKERY</span> — це
+          пекарня, яка взяла все найкраще, і зберегла смак традиційної випічки
+          та натуральність інгредієнтів.
         </p>
         <p>
           Ми працюємо як найвідоміші мережі—
-          <span class="color-green">5 хвилин і замовлення готове.</span> А ще у
-          наших пекарень стильний дизайн та висока якість обслуговування!
+          <span class="text-decoration">5 хвилин і замовлення готове.</span> А
+          ще у наших пекарень стильний дизайн та висока якість обслуговування!
         </p>
         <img
           src="./img/Backer-men.jpg"
           alt="Чоловік пекар дивится на хліб з посмішкою"
         />
       </section>
-      <section id="chefs-section">
-        <h2>Наші найкращі <span class="color-darkgreen">шеф-кухарі</span></h2>
+      <section class="chefs-section" id="chefs-section">
+        <h2>
+          Наші найкращі <span class="chefs-decoration-title">шеф-кухарі</span>
+        </h2>
         <ul>
           <li>
             <article>
               <img src="./img/Nastya-Baker.jpg" alt="Пекар Настя" />
-              <h3>Настя</h3>
+              <h3 class="chefs-name">Настя</h3>
               <p>Привіт, я Настя!</p>
               <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
               <p>Я випічу для вас найсмачніщі вироби!</p>
@@ -79,45 +81,61 @@
           </li>
         </ul>
       </section>
-      <section id="formats-section">
+      <section class="formats-section" id="formats-section">
         <h2>Формати</h2>
         <ul>
           <li>
             <article>
-              <h3>Walrus</h3>
-              <p>Площа: до 120 м2</p>
-              <p>Меню: розширене меню</p>
-              <p>
-                Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
-                офіціанти-різнороби
-              </p>
-              <p>Посадкові місця: є</p>
+              <h3 class="formats-names">Walrus</h3>
+              <div class="formats-description">
+                <p>Площа: до 120 м2</p>
+                <p>Меню: розширене меню</p>
+                <p>
+                  Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                  офіціанти-різнороби
+                </p>
+                <p>Посадкові місця: є</p>
+              </div>
             </article>
           </li>
           <li>
             <article>
-              <h3>Horseshoe</h3>
-              <p>Площа: до 25 м2</p>
-              <p>Меню: найпопулярніші позиції меню</p>
-              <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
-              <p>Посадкові місця: відсутні</p>
+              <h3 class="formats-names">Horseshoe</h3>
+              <div class="formats-description">
+                <p>Площа: до 25 м2</p>
+                <p>Меню: найпопулярніші позиції меню</p>
+                <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
+                <p>Посадкові місця: відсутні</p>
+              </div>
             </article>
           </li>
           <li>
             <article>
-              <h3>Handlebar</h3>
-              <p>Площа: до 15 м2</p>
-              <p>Меню: найпопулярніші позиції меню</p>
-              <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
-              <p>Посадкові місця: відсутні</p>
+              <h3 class="formats-names">Handlebar</h3>
+              <div class="formats-description">
+                <p>Площа: до 25 м2</p>
+                <p>Меню: найпопулярніші позиції меню</p>
+                <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
+                <p>Посадкові місця: відсутні</p>
+              </div>
             </article>
           </li>
         </ul>
       </section>
-      <section id="contacts-section">
+      <section class="contacts-section" id="contacts-section">
         <h2>Приєднуйся до мережі пекарень</h2>
-        <p>Заповни форму, щоб ми звʼязались з тобою!</p>
+        <p class="contacts-form-text">
+          Заповни форму, щоб ми звʼязались з тобою!
+        </p>
         <!--Тут має бути форма-->
+        <button type="button" class="button">
+          <a href="#">Замовити дзвінок</a>
+        </button>
+        <p class="contacts-agreement">
+          Натискаючи на кнопку я погоджуюсь з
+          <a href="#">політикою конфіденційності</a>
+        </p>
+
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1636289098733!2d30.4912733!3d50.4566776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1761744728534!5m2!1suk!2sua"
           width="603"
@@ -133,23 +151,29 @@
       <img src="./img/logo.svg" alt="лого" />
       <nav>
         <ul>
-          <li><a href="#traditions-section">Наші традиції</a></li>
-          <li><a href="#chefs-section">Шеф-кухарі</a></li>
-          <li><a href="#formats-section">Формати</a></li>
-          <li><a href="#contacts-section">Контакти</a></li>
+          <li>
+            <a class="menu-point" href="#traditions-section">Наші традиції</a>
+          </li>
+          <li><a class="menu-point" href="#chefs-section">Шеф-кухарі</a></li>
+          <li><a class="menu-point" href="#formats-section">Формати</a></li>
+          <li><a class="menu-point" href="#contacts-section">Контакти</a></li>
         </ul>
       </nav>
       <address>
         <ul>
-          <li><a href="tel:+380960000007">+ 38 (096) 000 00 07</a></li>
-          <li>
-            <a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a>
-          </li>
-          <li>
-            <a href="https://maps.app.goo.gl/qRS1tQLcor2ekWXy6" target="_blank"
-              >Україна, м. Київ, вул. Січових Стрільців 54</a
-            >
-          </li>
+          <div class="adress-info">
+            <li><a href="tel:+380960000007">+ 38 (096) 000 00 07</a></li>
+            <li>
+              <a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a>
+            </li>
+            <li>
+              <a
+                href="https://maps.app.goo.gl/qRS1tQLcor2ekWXy6"
+                target="_blank"
+                >Україна, м. Київ, вул. Січових Стрільців 54</a
+              >
+            </li>
+          </div>
           <li>
             <a href="#">
               <!-- Facebook SVG Icon -->
@@ -162,8 +186,12 @@
           </li>
         </ul>
       </address>
-      <a href="#" target="_blank">Політика конфіденційності</a>
-      <p>© 2024 ShopBakery. Всі права захищені.</p>
+      <a class="footer-policity" href="#" target="_blank"
+        >Політика конфіденційності</a
+      >
+      <p class="footer-copyright">
+        &copy; 2024 ShopBakery. Всі права захищені.
+      </p>
     </footer>
   </body>
 </html>
